refactor: image url update

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <div class="container">
                 <div class="about-content">
                     <div>
-                        <img src="/img/Sourov.jpg" alt="Sourov Sarkar - Backend Developer" class="about-image">
+                        <img src="img/Sourov.jpg" alt="Sourov Sarkar - Backend Developer" class="about-image">
                     </div>
                     <div class="about-text">
                         <h2>About Me</h2>
