--- a/index.html
+++ b/index.html
@@ -1321,7 +1321,7 @@
                         <p><a href="tel:+8801728326959">+8801728326959</a></p>
                     </div>
                 </div>
-                <form class="contact-form" id="contactForm" novalidate>
+                <!-- <form class="contact-form" id="contactForm" novalidate>
                     <div class="form-success" id="formSuccess" role="alert">
                         Thank you! Your message has been sent successfully.
                     </div>
@@ -1346,7 +1346,7 @@
                         <div class="form-error" id="messageError" role="alert"></div>
                     </div>
                     <button type="submit" class="btn">Send Message</button>
-                </form>
+                </form> -->
             </div>
         </section>
     </main>
